Adding 'TensorFlow' to Python cheat sheet.

--- a/TensorFlow/Dataset.ipynb
+++ b/TensorFlow/Dataset.ipynb
@@ -5,17 +5,7 @@
    "execution_count": 2,
    "id": "b5ab3f3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-19 08:43:14.026229: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-19 08:43:14.967209: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -43,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "48cefdbd",
    "metadata": {},
@@ -53,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3c35be6a",
    "metadata": {},
    "outputs": [
@@ -63,7 +52,7 @@
        "<_TensorSliceDataset element_spec=TensorSpec(shape=(3,), dtype=tf.int32, name=None)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,13 +60,12 @@
    "source": [
     "t = tf.constant([[1, 2, 3], [4, 5, 6],\n",
     "                 [7, 8,\n",
-    "                  9]])  # 1st dimension is automatically treated as batch size\n",
+    "                  9]])\n",
     "dataset = tf.data.Dataset.from_tensor_slices(t)\n",
     "dataset"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bbd9e571",
    "metadata": {},
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "953f116e",
    "metadata": {},
    "outputs": [
@@ -112,19 +100,18 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "60b61ebe",
    "metadata": {},
    "source": [
     "You can collect the batches in-memory all at once for simple cases this way, just like with a normal iterator.\n",
     "\n",
-    "If it's a simple tensor dataset, you can concatenate to one big tensors with all the samples.\n"
+    "If it's a simple tensor dataset, you can concatenate to one big tensor with all the samples.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "daab1078",
    "metadata": {},
    "outputs": [
@@ -134,15 +121,10 @@
      "text": [
       "[<tf.Tensor: shape=(3,), dtype=int32, numpy=array([1, 2, 3], dtype=int32)>, <tf.Tensor: shape=(3,), dtype=int32, numpy=array([4, 5, 6], dtype=int32)>, <tf.Tensor: shape=(3,), dtype=int32, numpy=array([7, 8, 9], dtype=int32)>]\n",
       "\n",
-      "tf.Tensor([1 2 3 4 5 6 7 8 9], shape=(9,), dtype=int32)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-19 08:45:20.468667: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32 and shape [3,3]\n",
-      "\t [[{{node Placeholder/_0}}]]\n"
+      "tf.Tensor(\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]], shape=(3, 3), dtype=int32)\n"
      ]
     }
    ],
@@ -151,11 +133,10 @@
     "print(list(dataset))\n",
     "\n",
     "print()\n",
-    "print(tf.concat(list(dataset), axis=0))"
+    "print(tf.transpose(tf.stack(list(dataset), axis=1)))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c2a7f90",
    "metadata": {},
@@ -217,19 +198,22 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e15d352d",
    "metadata": {},
    "source": [
     "## Counting\n",
     "\n",
-    "You can use this to **count batches**.\n"
+    "You can use this to **count batches**.\n",
+    "\n",
+    "Dataset is reduced to a tensor (which is a scalar) and then converted to numpy format.\n",
+    "\n",
+    "The ignored `_` param is an item from iteration (a batch size of 1, which is a single sample in this case)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "id": "a3e62250",
    "metadata": {},
    "outputs": [
@@ -239,29 +223,30 @@
        "3"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_dataset().reduce(0, lambda x, _: x + 1).numpy()\n"
+    "make_dataset().reduce(0, lambda x, _: x + 1).numpy()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c9faac78",
    "metadata": {},
    "source": [
     "## Shuffling\n",
     "\n",
-    "Notice that the **whole thing** was shuffled even though the batch size was 1.\n"
+    "Notice that the **whole thing** was shuffled even though the batch size was 1.\n",
+    "\n",
+    "NOTE: the shuffle is different (potentially) for each time you iterate the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "6b1e53b5",
    "metadata": {},
    "outputs": [
@@ -287,7 +272,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5668899d",
    "metadata": {},
@@ -372,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "7a5032ea",
    "metadata": {},
    "outputs": [
@@ -380,9 +364,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "train\n",
+      "--BATCH--\n",
+      "tf.Tensor([4 5 6], shape=(3,), dtype=int32)\n",
+      "\n",
       "--BATCH--\n",
       "tf.Tensor([1 2 3], shape=(3,), dtype=int32)\n",
       "\n",
+      "val\n",
       "--BATCH--\n",
       "tf.Tensor([7 8 9], shape=(3,), dtype=int32)\n",
       "\n"
@@ -390,13 +379,16 @@
     }
    ],
    "source": [
-    "dataset = make_dataset().shuffle(buffer_size=3, seed=42)\n",
-    "train, val = dataset.take(2), dataset.skip(2)\n",
-    "print_batches(train)"
+    "dataset = make_dataset()\n",
+    "# have to shuffle after take() and skip() or it won't be consistent\n",
+    "train, val = dataset.take(2).shuffle(buffer_size=3, seed=42), dataset.skip(2).shuffle(buffer_size=3, seed=42)\n",
+    "print('train')\n",
+    "print_batches(train)\n",
+    "print('val')\n",
+    "print_batches(val)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5c6dd2c1",
    "metadata": {},
@@ -426,7 +418,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "204ef935",
    "metadata": {},
@@ -467,14 +458,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "50d624f1",
    "metadata": {},
    "source": [
     "## Map\n",
     "\n",
-    "Function runs on each batch and returns a new batch, which is generally a transformed version of the old batch.\n"
+    "Function runs on each batch and returns a new batch, which is generally a transformed version of the old batch.\n",
+    "\n",
+    "It is possible for it to be a fundamentally differently-shaped batch though...whatever you need it to do."
    ]
   },
   {
@@ -505,7 +497,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "01c218a1",
    "metadata": {},
@@ -543,7 +534,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "302de64b",
    "metadata": {},
@@ -553,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "id": "89360a4b",
    "metadata": {},
    "outputs": [
@@ -580,7 +570,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8cc29575",
    "metadata": {},
@@ -626,7 +615,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "506df0ac",
    "metadata": {},
@@ -668,7 +656,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "420b478c",
    "metadata": {},
@@ -711,7 +698,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "109b9df1",
    "metadata": {},
@@ -752,7 +738,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6b9668a2",
    "metadata": {},
@@ -791,7 +776,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "87abf1e8",
    "metadata": {},
@@ -831,7 +815,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "db8cf32d",
    "metadata": {},
@@ -878,7 +861,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "965aab6d",
    "metadata": {},
@@ -918,7 +900,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aa6071d6",
    "metadata": {},
@@ -964,7 +945,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "05428716",
    "metadata": {},
@@ -998,7 +978,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ae216a5e",
    "metadata": {},
@@ -1031,7 +1010,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6129f7d4",
    "metadata": {},
@@ -1097,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
