--- a/TensorFlow/Keras.ipynb
+++ b/TensorFlow/Keras.ipynb
@@ -24,7 +24,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "41108601",
    "metadata": {},
@@ -33,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "65cb60fe",
    "metadata": {},
@@ -105,7 +103,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c783f29c",
    "metadata": {},
@@ -149,7 +146,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5dd33ec5",
    "metadata": {},
@@ -202,7 +198,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "85e92ea1",
    "metadata": {},
@@ -265,7 +260,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "59cf5834",
    "metadata": {},
@@ -343,9 +337,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03684c55",
+   "metadata": {},
+   "source": [
+    "# Workflow Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c397bc1",
+   "metadata": {},
+   "source": [
+    "```Python\n",
+    "model = tf.keras.models.Sequential([tf.keras.layers.Dense(1, activation='sigmoid')])\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE),\n",
+    "          loss='binary_crossentropy',\n",
+    "          metrics=['accuracy'])\n",
+    "history = model.fit(\n",
+    "    train_dataset,\n",
+    "    validation_data=validation_dataset,\n",
+    "    epochs=epochs\n",
+    ") # use history.histor['accuracy'] for plotting\n",
+    "model.predict(dataset)\n",
+    "model.predict_on_batch(batch)\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b80910e9",
+   "id": "6c3a856d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -367,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
