--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1829,9 +1829,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b94108a",
+   "metadata": {},
+   "source": [
+    "# Tuple Unpacking Assignment Generality\n",
+    "\n",
+    "The left side of a tuple unpacking (or other unpacking) needn't be new variables, or variables at all.  __Anything assignmable__ will do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d47f7071",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 3, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "a[0],a[4] = a[4],a[0]\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3fd5434",
+   "id": "2d43faf2",
    "metadata": {},
    "outputs": [],
    "source": []
