--- a/TensorFlow/Tensor Shapes & Routing.ipynb
+++ b/TensorFlow/Tensor Shapes & Routing.ipynb
@@ -11,7 +11,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "06c937c8",
    "metadata": {},
@@ -20,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ca94e678",
    "metadata": {},
@@ -32,7 +30,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d41d7981",
    "metadata": {},
@@ -71,7 +68,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3729e34b",
    "metadata": {},
@@ -99,7 +95,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1c5a2a1d",
    "metadata": {},
@@ -132,7 +127,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "817bcd2c",
    "metadata": {},
@@ -170,7 +164,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "31a92202",
    "metadata": {},
@@ -202,7 +195,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "76bfaa9b",
    "metadata": {},
@@ -235,14 +227,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4c737c65",
    "metadata": {},
    "source": [
-    "## Dictionary in Keras\n",
-    "\n",
-    "Note the use of **input_shape** instead of **input**.\n"
+    "## Dictionary in Keras"
    ]
   },
   {
@@ -270,7 +259,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4298d15f",
    "metadata": {},
@@ -338,7 +326,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f92b3f37",
    "metadata": {},
@@ -412,7 +399,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a80cb9c1",
    "metadata": {},
@@ -487,7 +473,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d47a4579",
    "metadata": {},
@@ -536,7 +521,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dbf104d4",
    "metadata": {},
@@ -545,7 +529,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "73cd11fd",
    "metadata": {},
@@ -574,7 +557,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "01d10f40",
    "metadata": {},
@@ -626,7 +608,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b8a11217",
    "metadata": {},
@@ -688,7 +669,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bbf5c62d",
    "metadata": {},
@@ -697,7 +677,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cb492ec6",
    "metadata": {},
@@ -706,7 +685,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e4f29156",
    "metadata": {},
@@ -736,7 +714,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3973db1e",
    "metadata": {},
@@ -767,7 +744,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "191357e8",
    "metadata": {},
@@ -801,7 +777,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0e4ab2ec",
    "metadata": {},
@@ -841,7 +816,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "62b3a4dc",
    "metadata": {},
@@ -930,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
