Adding some random things that came up warming up for interview today.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -3178,9 +3178,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb78778d",
+   "metadata": {},
+   "source": [
+    "# Trailing Commas\n",
+    "\n",
+    "Allowed for array literals but not function calls.  You never see it though."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e637707",
+   "id": "e2f9c248",
    "metadata": {},
    "outputs": [],
    "source": []
