--- a/java/Recent Versions.ipynb
+++ b/java/Recent Versions.ipynb
@@ -997,9 +997,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a291b30",
+   "metadata": {},
+   "source": [
+    "# Record\n",
+    "\n",
+    "Records automatically get:\n",
+    "  - constructor\n",
+    "  - getters\n",
+    "  - equals\n",
+    "  - hashCode\n",
+    "  - toString\n",
+    "  \n",
+    "They do work in iJava, but for some reason the getters don't work (have to use the variables, which are not private).\n",
+    "\n",
+    "NOTE: empty record body basically makes it a struct that can automatically be used in collections."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b809edc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point[x=10, y=100]\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class RecordDemo {\n",
+    "    private static record Point(int x, int y) {}\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        System.out.println(new Point(10, 100));\n",
+    "        \n",
+    "        Point p = new Point(100, 200);\n",
+    "        System.out.println(p.x);  // not supposed to be possible\n",
+    "        // System.out.println(p.getX());  // supposed to be possible\n",
+    "    }\n",
+    "}\n",
+    "RecordDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7246b262",
+   "id": "13a772ce",
    "metadata": {},
    "outputs": [],
    "source": []
