--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -2313,9 +2313,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d349d476",
+   "metadata": {},
+   "source": [
+    "# Numeric Literals and Numeric Types Caveats\n",
+    "\n",
+    "  - assigning any nonnegative number to char without casting is fine (not considered int)\n",
+    "  - assigning any number to short without casting is fine (not considered int)\n",
+    "  - hex literals are integer and will cause upconversion\n",
+    "    - but other literals go with the variable (mostly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a1be4684",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "\u0001\n",
+      "￿\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class CharDemo {\n",
+    "    public static void main() {\n",
+    "        char x = 0;\n",
+    "        char y = 1;\n",
+    "        // char z = -1; // ILLEGAL\n",
+    "        char z = (char)-1;\n",
+    "        \n",
+    "        short a = 0;\n",
+    "        short b = 1;\n",
+    "        short c = -1;\n",
+    "        b = -1;\n",
+    "        if (b == -1) System.out.println(\"True\");\n",
+    "        \n",
+    "        System.out.println(y); // non-printable\n",
+    "        System.out.println(z); // non-printable\n",
+    "        System.out.println(c); // -1\n",
+    "        \n",
+    "        char h = 0xff;\n",
+    "        if (h == -1) System.out.println(\"True\");\n",
+    "    }\n",
+    "}\n",
+    "CharDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60a72382",
+   "id": "5e4796e2",
    "metadata": {},
    "outputs": [],
    "source": []
