--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -960,9 +960,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8373cac8",
+   "metadata": {},
+   "source": [
+    "# Trailing Commas\n",
+    "\n",
+    "These are allowed everywhere very permissively in Java, including in function calls.  It helps with formatting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a00652eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3,]\n",
+    "print(l)\n",
+    "\n",
+    "def f(a, b):\n",
+    "    print(a + b)\n",
+    "    \n",
+    "f(1, 2,)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2ce65c",
+   "id": "d18fac19",
    "metadata": {},
    "outputs": [],
    "source": []
