Updating for Java 21 and Python 3.12 (kind of).

--- a/java/Recent Versions.ipynb
+++ b/java/Recent Versions.ipynb
@@ -1003,21 +1003,24 @@
    "source": [
     "# Record\n",
     "\n",
-    "Records automatically get:\n",
+    "Records are __implicitly static__ and automatically get:\n",
     "  - constructor\n",
-    "  - getters\n",
+    "  - getters (with same name as variables)\n",
+    "    - the actual variables you specified become `private final`\n",
     "  - equals\n",
     "  - hashCode\n",
     "  - toString\n",
     "  \n",
-    "They do work in iJava, but for some reason the getters don't work (have to use the variables, which are not private).\n",
+    "The generated class is a subclass of `java.lang.Record`.\n",
+    "  \n",
+    "NOTE: __empty record body__ basically makes it a struct that can automatically be used in collections.  However, keep in mind, the variables are `final` and `private`.\n",
     "\n",
-    "NOTE: empty record body basically makes it a struct that can automatically be used in collections."
+    "NOTE: in iJava (Jupyter), you can access the private final variables of a record if the record is defined inside the class.  This seems to be a bug, probably caused by REPL behavior, and should not be relied on as a feature of the language!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "b809edc3",
    "metadata": {},
    "outputs": [
@@ -1031,24 +1034,318 @@
     }
    ],
    "source": [
+    "public record Point(int x, int y) {\n",
+    "    // void setX(int newX) {x = newX;} // ILLEGAL (x is final)\n",
+    "}\n",
+    "\n",
     "public class RecordDemo {\n",
-    "    private static record Point(int x, int y) {}\n",
+    "    // This is how you'd do it inside the class.\n",
+    "    // Notice you don't need 'static' here (but will still work if you put it).\n",
+    "    // private record Point(int x, int y) {}\n",
     "    \n",
     "    public static void main() {\n",
     "        System.out.println(new Point(10, 100));\n",
     "        \n",
     "        Point p = new Point(100, 200);\n",
-    "        System.out.println(p.x);  // not supposed to be possible\n",
-    "        // System.out.println(p.getX());  // supposed to be possible\n",
+    "        // System.out.println(p.x);  // ILLEGAL\n",
+    "        System.out.println(p.x()); // access with same name as variable\n",
     "    }\n",
     "}\n",
     "RecordDemo.main();"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "847c5926",
+   "metadata": {},
+   "source": [
+    "# Local JVM Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "13a772ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JVM Version: 21.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        String javaVersion = System.getProperty(\"java.version\");\n",
+    "        System.out.println(\"JVM Version: \" + javaVersion);\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eed745c",
+   "metadata": {},
+   "source": [
+    "# Void Switch Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "78fa740d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SwitchDemo {\n",
+    "    public static void main() {\n",
+    "        int x = 5;\n",
+    "        switch (x) {\n",
+    "            case 0 -> System.out.println(\"0\");\n",
+    "            case 5 -> System.out.println(\"5\");\n",
+    "            default -> System.out.println(\"meh\");\n",
+    "        } // no semicolon needed\n",
+    "    }\n",
+    "}\n",
+    "SwitchDemo.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a4bb141",
+   "metadata": {},
+   "source": [
+    "# Java 21 (2023) (LTS)\n",
+    "\n",
+    "This section is manually created shortly after the release of 21 based on looking up feature lists and upgrading my systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31298882",
+   "metadata": {},
+   "source": [
+    "## Switch Pattern Matching\n",
+    "\n",
+    "This is similar to the previous idea of `o instanceof String s` already introduced, plus a bunch of other changes to make switch expressions more concise replacements of switch statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5f73d2e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "2 or 5\n",
+      "4\n",
+      "100\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PatternDemo {\n",
+    "    static void main() {\n",
+    "        Object o = \"hello\";\n",
+    "        \n",
+    "        // casting to types\n",
+    "        switch(o) {\n",
+    "            case null -> System.out.println(\"null\");\n",
+    "            case String s -> System.out.println(s);\n",
+    "            case Integer n -> System.out.println(\"integer!\");\n",
+    "            default -> System.out.println(\"I don't know\");\n",
+    "        }\n",
+    "        \n",
+    "        // multiple values in a case\n",
+    "        Integer x = 5;\n",
+    "        switch(x) {\n",
+    "            case 2, 5 -> System.out.println(\"2 or 5\");   // avoiding having to have fall-through cases!\n",
+    "            case null, default -> System.out.println(\"nothing\"); // null has to be left of default\n",
+    "        };\n",
+    "        \n",
+    "        // bodies for some cases\n",
+    "        Integer y = 2;\n",
+    "        Integer z = switch(y) {\n",
+    "            case 1 -> x;\n",
+    "            case 2 -> {\n",
+    "                int temp = y*y;\n",
+    "                yield temp;\n",
+    "            } // semicolon actually forbidden here\n",
+    "            default -> 0;\n",
+    "        };\n",
+    "        System.out.println(z);\n",
+    "        \n",
+    "        // Guard clauses\n",
+    "        int a = 100;\n",
+    "        switch (Integer.valueOf(a)) {\n",
+    "            case 10, 20 -> System.out.println(\"10 or 20\");\n",
+    "            case Integer i when i == 100 -> System.out.println(i.toString());\n",
+    "            default -> System.out.println(\"I don't know\");\n",
+    "        }\n",
+    "        \n",
+    "        // old-fashioned way also has the new enhancements\n",
+    "        switch (Integer.valueOf(a)) {\n",
+    "            case 10, 20 :\n",
+    "                System.out.println(\"10 or 20\");\n",
+    "                break;\n",
+    "            case Integer i when i == 100:\n",
+    "                System.out.println(i.toString());\n",
+    "                break;\n",
+    "            default:\n",
+    "                System.out.println(\"I don't know\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "PatternDemo.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10ae0c1e",
+   "metadata": {},
+   "source": [
+    "## Record Pattern Matching\n",
+    "\n",
+    "`instanceof` can now do multiple levels of record destructuring!\n",
+    "\n",
+    "Note the use of __type inference__ is also opermitted as shown for variable `y` below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0c8bc4dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "record Point(int x, int y) {}\n",
+    "record Radius(int r) {}\n",
+    "record Circle(Point p, Radius r) {}\n",
+    "\n",
+    "class RecordDemo {\n",
+    "    static void main() {\n",
+    "        Object o = new Circle(new Point(100, 200), new Radius(1000));\n",
+    "        \n",
+    "        if (o instanceof Circle(Point(int x, var y), Radius(int r))) {\n",
+    "            System.out.println(x);\n",
+    "            System.out.println(y);\n",
+    "            System.out.println(r);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "RecordDemo.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26b70fd1",
+   "metadata": {},
+   "source": [
+    "## StringBuilder.repeat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e5889b43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaastop\n"
+     ]
+    }
+   ],
+   "source": [
+    "class StringBuilderDemo {\n",
+    "    static void main() {\n",
+    "        StringBuilder s = new StringBuilder();\n",
+    "        s.append(\"start:\");\n",
+    "        s.repeat(\"a\", 100);\n",
+    "        s.append(\"stop\");\n",
+    "        System.out.println(s);\n",
+    "    }\n",
+    "}\n",
+    "StringBuilderDemo.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf74d2f",
+   "metadata": {},
+   "source": [
+    "## java.util.SequencedCollection\n",
+    "\n",
+    "`java.util.SequencedCollection` is a new __superinterface__ for interfaces like `List` that have ordered collections where you can access the first and last items.\n",
+    "\n",
+    "It has some methods (which are now in those interfaces) for doing things on the two ends of the sequence, and for reversing the sequence non-destructively.\n",
+    "\n",
+    "Methods are:\n",
+    "  - `addFirst`, `addLast`\n",
+    "  - `getFirst`, `getLast`\n",
+    "  - `removeFirst`, `removeLast`\n",
+    "  - `reversed`\n",
+    "  \n",
+    "It inherits from `java.lang.Iterable`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de74d71e",
+   "metadata": {},
+   "source": [
+    "## Virtual Threads (Project Loom)\n",
+    "\n",
+    "Instead of threads being stuck serving potentially blocked tasks they were created with, now Java can reuse physical threads (known as __platform threads__) to handle other virtual threads when they're blocked.  The existing methods like `sleep` have been updated to work nicely with this.\n",
+    "\n",
+    "Virtual threads can be created with `Thread.startVirtualThread(runnable)` or `Thread.ofVirtual().start(runnable)`.\n",
+    "\n",
+    "A virtual thread pool (to which you can submit `Runnable` methods) can be created with `Executors.newVirtualThreadPerTaskExecutor()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0244f457",
+   "metadata": {},
+   "source": [
+    "## Preview Features\n",
+    "\n",
+    "Each version of Java has features that are in preview, which I ignore here because they're not official yet.  But the ones that are in preview in 21 are looking kind of Pythonic, and friendlier to commandline scripting!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a772ce",
+   "id": "ba167ae1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1066,7 +1363,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "20.0.1+9-29"
+   "version": "21.0.1+12-29"
   }
  },
  "nbformat": 4,
